header/menu: fix style on mobile

--- a/src/components/Layout/Header/style.scss
+++ b/src/components/Layout/Header/style.scss
@@ -9,7 +9,7 @@
   max-width: calc(100vw - 6rem);
   margin: 0 auto;
   align-items: center;
-  z-index: 1000;
+  z-index: 2000;
   top: 0;
   left: 0;
   justify-content: space-between;
